<resources>
    <string name="app_name">Freelance Arena</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">$Name</string>
    <string name="reg_number">$Reg Number</string>
    <string name="overall_score">Overall Score</string>
    <string name="score">$Score</string>
    <string name="stats">Stats</string>
    <string name="freelance_arena_score">Freelance Arena Score</string>
    <string name="about_us">About Us</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="qr_message">QR Message</string>
    <string name="log_out">Log Out</string>
    <string name="logo_description">logut_description\n</string>
    <string name="crafted_with_by">Crafted with ❤️ by</string>
    <string name="please_provide_your_feedback">Please provide your feedback</string>
    <string name="send_you_feedback">Send you feedback</string>
    <string name="give_us_feedback">Give us Feedback !!</string>
    <string name="send">Send</string>
    <string name="feedback">Feedback</string>
</resources>