<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.devdreamerx.freelancearena.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.devdreamerx.freelancearena.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.devdreamerx.freelancearena.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.devdreamerx.freelancearena.ui.aboutus.AboutUsFragment"
        android:label="About Us"
        tools:layout="@layout/fragment_about_us"/>

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.devdreamerx.freelancearena.ui.feedback.Feedbackfragment"
        android:label="@string/feedback"
        tools:layout="@layout/fragment_feedback"/>
</navigation>