<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feedback.Feedbackfragment"
    android:background="@color/light_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/give_us_feedback"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/allerta_stencil"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/edt_feedback"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/edt_text_feedback"
            android:elevation="20dp"
            android:fontFamily="sans-serif"
            android:hint="@string/please_provide_your_feedback"
            android:importantForAutofill="no"
            android:padding="13dp"
            android:textColor="@color/black"
            android:textColorHint="#706E6E"
            android:textSize="14sp"
            tools:ignore="TextFields" />

        <androidx.constraintlayout.utils.widget.MotionButton
            android:id="@+id/feedback_send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stats_bg_1"
            android:text="@string/send"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:fontFamily="@font/allerta_stencil"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:elevation="20dp"/>
    </LinearLayout>

</ScrollView>